feat: sells module added
