# fastapi_backend/app/main.py
@@ -5,6 +5,7 @@ from .users import auth_backend, fastapi_users, AUTH_URL_PATH
 from fastapi.middleware.cors import CORSMiddleware
 from .utils import simple_generate_unique_route_id
 from app.routes.items import router as items_router
+from app.routes.sales import router as sales_router
 from app.config import settings
 
 app = FastAPI(
@@ -50,4 +51,5 @@ app.include_router(
 
 # Include items routes
 app.include_router(items_router, prefix="/items")
+app.include_router(sales_router, prefix="/sales")
 add_pagination(app)
